--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -3,8 +3,10 @@
 <h3>Search results: <%= @num_result %></h3>
 
 <% @foods.each do |food| %>
-  <%= Brand onwer: #{food.brand_owner} %>
-  <%= Description: #{food.description} %>
-  <%= GTIN/UPC code: #{food.gtin_upc_code} %>
-  <%= Ingredients: #{food.ingredients} %>
-<% end %>
+  <div id="food<%= food.gtin_upc_code" %>>
+    <h5><%= food.description %></h5><br>
+    <%= food.brand_owner %><br>
+    <%= food.gtin_upc_code %><br>
+    <%= food.ingredients %><br>
+  </div>
+  <% end %>
